--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
 		"@types/node": "^20.8.9",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^4.4.19",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.32",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prisma": "^5.5.2",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"tailwindcss": "^3.3.6",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
@@ -33,6 +37,8 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.5.2",
-		"@supabase/supabase-js": "^2.38.4"
+		"@supabase/supabase-js": "^2.38.4",
+		"date-fns": "^2.30.0",
+		"date-fns-tz": "^2.0.0"
 	}
 }
