--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^3.0.2",
+		"@lucia-auth/sveltekit": "^0.6.11",
 		"@prisma/client": "^5.5.2",
 		"@supabase/supabase-js": "^2.38.4",
 		"date-fns": "^2.30.0",
-		"date-fns-tz": "^2.0.0"
+		"date-fns-tz": "^2.0.0",
+		"lucia": "^2.7.6"
 	}
 }
