--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
 		"prisma": "^5.7.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-superforms": "^1.13.1",
 		"tailwindcss": "^3.3.6",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
