--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^2.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"@types/node": "^20.8.9",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
