--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"postinstall": "prisma generate"
 	},
 	"devDependencies": {
+		"@portabletext/svelte": "^2.1.11",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^2.3.1",
 		"@sveltejs/kit": "^1.20.4",
@@ -42,9 +43,12 @@
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^3.0.2",
 		"@prisma/client": "^5.14.0",
+		"@sanity/client": "^6.18.3",
+		"@sanity/image-url": "^1.0.2",
 		"@supabase/supabase-js": "^2.38.4",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.0",
+		"groq": "^3.43.0",
 		"lucia": "^2.7.6"
 	}
 }
