--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prisma": "^5.14.0",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-headless-table": "^0.18.2",
 		"sveltekit-superforms": "^1.13.1",
 		"tailwindcss": "^3.3.6",
 		"ts-node": "^10.9.1",
@@ -47,9 +48,14 @@
 		"@sanity/client": "^6.18.3",
 		"@sanity/image-url": "^1.0.2",
 		"@supabase/supabase-js": "^2.38.4",
+		"bits-ui": "^0.21.10",
 		"clerk-sveltekit": "^0.4.2",
+		"clsx": "^2.1.1",
 		"date-fns": "^2.30.0",
 		"date-fns-tz": "^2.0.0",
-		"groq": "^3.43.0"
+		"groq": "^3.43.0",
+		"lucide-svelte": "^0.394.0",
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1"
 	}
 }
