add payment to db

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
-		"vite": "^4.4.2",
+		"vaul-svelte": "^0.3.2",
+		"vite": "^5.4.9",
 		"zod": "^3.22.4"
 	},
 	"type": "module",
@@ -54,6 +55,7 @@
 		"date-fns-tz": "^2.0.0",
 		"groq": "^3.43.0",
 		"lucide-svelte": "^0.394.0",
+		"svelte-legos": "^0.2.5",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
