--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
 		"lucide-svelte": "^0.453.0",
+		"mode-watcher": "^0.4.1",
 		"postcss": "^8.4.32",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
@@ -34,6 +35,7 @@
 		"svelte": "^4.2.19",
 		"svelte-check": "^3.4.3",
 		"svelte-headless-table": "^0.18.2",
+		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^1.13.1",
 		"tailwindcss": "^3.3.6",
 		"ts-node": "^10.9.1",
