--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-vercel": "^2.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@types/node": "^20.8.9",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
-		"autoprefixer": "^10.4.16",
 		"bits-ui": "^0.21.16",
-		"daisyui": "^4.4.19",
+		"daisyui": "^5.0.23",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -37,7 +37,7 @@
 		"svelte-headless-table": "^0.18.2",
 		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^1.13.1",
-		"tailwindcss": "^3.3.6",
+		"tailwindcss": "^4.1.4",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.2.2",
